@startuml

title __SAMPLE's Class Diagram__\n

  package sample {
    class Controller {
        + customerNameTextField : TextField
        + customerIdLabel : Label
        + deviceNameTextField : TextField
        + deviceIdLabel : Label
        + priceTextField : TextField
        + weightTextField : TextField
        + descriptionTextArea : TextArea
        + deviceIdTextField : TextField
        + productIdLabel : Label
        + customerIdTextField : TextField
        + customersView : TableView<Customer>
        + customerIdColumn : TableColumn<Customer, Integer>
        + customerNameColumn : TableColumn<Customer, String>
        + devicesView : TableView<Device>
        + deviceIdColumn : TableColumn<Device, Integer>
        + deviceNameColumn : TableColumn<Device, String>
        + priceColumn : TableColumn<Device, Float>
        + weightColumn : TableColumn<Device, Float>
        + descriptionColumn : TableColumn<Device, String>
        + productsView : TableView<Product>
        + productIdColumn : TableColumn<Product, Integer>
        + productCustomerIdColumn : TableColumn<Product, Integer>
        + productDeviceIdColumn : TableColumn<Product, Integer>
        + Controller()
        - initialize()
        - load()
        + addCustomerButtonClick()
        + removeCustomerButtonClick()
        + updateCustomerButtonClick()
        + addDeviceButtonClick()
        + removeDeviceButtonClick()
        + updateDeviceButtonClick()
        + addProductButtonClick()
        + removeProductButtonClick()
        + updateProductButtonClick()
    }
  }
  

  package sample {
    class Main {
        + start()
        {static} + main()
    }
  }
  

  abstract class Parameters {
      + Parameters()
      {abstract} + getRaw()
      {abstract} + getUnnamed()
      {abstract} + getNamed()
  }
  

  Controller o-- AudioSystemService : service
  Main -up-|> Application
  Main +-down- Parameters


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
